test/soya/error/type/field.soy
class p { }

function void main() {
  var p x;
  x.a;
  putchar(c.x);
}
